--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@vueuse/integrations": "^10.3.0",
     "feather-icons": "^4.28.0",
     "frappe-ui": "^0.1.71",
+    "lucide-vue-next": "^0.383.0",
     "gemoji": "^8.1.0",
     "lodash": "^4.17.21",
     "mime": "^4.0.1",
@@ -25,7 +26,8 @@
     "vite": "^4.4.9",
     "vue": "^3.4.12",
     "vue-router": "^4.2.2",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "axios": "^1.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
